--- a/LECTURE1.Rmd
+++ b/LECTURE1.Rmd
@@ -16,9 +16,9 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 ![](FoodWeb1.jpg)
 
 ## Systems ecology: a way of thinking   
-Ecology is messy. When we work in nature, we are dealing with *inherently complex systems*. _All elements in a natural system are connected_, full of dynamic interactions. Interactions among organisms, between organisms and their environment to meet basic needs -- these linkages are what makes ecology messy, but also endlessly fascinating. 
+Ecology is messy. When we work in natural environments, we are dealing with *inherently complex systems*. _All elements in a natural system are connected_, full of dynamic interactions. Interactions among organisms, between organisms and their environment to meet basic needs -- these linkages are what makes ecology messy, but also endlessly fascinating. 
 
-We can think of humans as just another element in these complex systems. And wildlife conservation and mangement is the task of manipulating or tweaking these linkages to meet societal objectives for natural systems.  
+We can think of humans as just another element in these complex systems. And wildlife conservation and mangement is the task of manipulating these linkages to meet societal objectives for natural systems.  
 
 This is not a systems ecology class! 
 
