--- a/index.Rmd
+++ b/index.Rmd
@@ -26,7 +26,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 **Lab**: F at 10am (3 hours) 
 **Office hours**:    
 - Shoemaker: Wed from 11 to noon (FA 220E)    
-- Sedinger: TBD 
+- Sedinger: Mon from 11 to noon (FA 220E) 
   
 - Lectures and Labs will be held in **FA 301**    
 - Labs may occasionally be held in the NRES computer lab (**FA 234**)    
