--- a/LECTURE7.Rmd
+++ b/LECTURE7.Rmd
@@ -308,7 +308,7 @@ You can read the **elements** of a transition matrix as follows:
 
 > "The per-capita production of _(row name)_ by _(col name)_ is _(value of element)_"      
 
-Now we can start filling in this matrix. Let's begin with the top left **element** of the matrix. This represents the per-capita transition rate from Juveniles (col) to Juveniles (row). What is the value of this? 
+Now we can start filling in this matrix. Let's begin with the top left **element** of the matrix. This represents the per-capita transition rate from Juveniles (col) to Juveniles (row). What is the value of this element? 
 
 Let's update our transition matrix:
 
@@ -439,7 +439,7 @@ NOTE: this is also a question in Lab 4!
 
 > We assumed that the Red-tailed hawk life history could be described in terms of three major life stages: hatchling (first year of life), juvenile (largely individuals in their second year of life), and adult (generally the third year of life and beyond). Adults are the primary reproductive stage, and produce an average of 3 new hatchlings each year. Juveniles are expected to produce only 1 new hatchling each year. We assumed that adults experienced an average of 18% mortality each year. Juvenile mortality was set at 30% per year. Approximately 5% of juveniles remain in the juvenile phase each year, and all other survivors transition to the adult stage. Finally, hatchlings had a 20% chance of surviving and transitioning to become juveniles. We initialized the population with 1000 hatchlings, 150 juveniles, and 5 adults. 
 
-**Q:** What does the transition matrix look like?
+**Q:** What does the transition matrix look like? [tophat]
 
 **Q:** What does the initial stage abundance vector look like?
 
