--- a/LECTURE8.Rmd
+++ b/LECTURE8.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Stochasticity and Uncertainty"
 author: "NRES 470/670"
-date: "Feb 20, 2018"
+date: "Spring 2019"
 output: 
   html_document: 
     theme: spacelab
@@ -13,13 +13,33 @@ output:
 knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 ```
 
+```{r echo=FALSE}
+
+############################################################
+####                                                    ####  
+####  NRES 470, Lecture 8                               ####
+####                                                    ####
+####  Kevin Shoemaker                                   #### 
+####  University of Nevada, Reno                        ####
+####                                                    #### 
+############################################################
+
+
+############################################################
+####  Stochasticity and Uncertainty                     ####
+############################################################
+
+
+```
+
+
 ![](uncertainty2.jpg)
 
 ## Uncertainty!
 
 All ecological systems are full of uncertainty. We all know it intuitively. But what *exactly* do we mean by that? And how can we deal with it? How can we incorporate it into our models? 
 
-This is one of the most important modules in this course. But it is not in the Gotelli book, nor is it in highlighted in most ecology textbooks.
+This is one of the most important modules in this course. But it is *not in the Gotelli book*, nor is it in highlighted in most basic ecology textbooks.
 
 ### A taxonomy of uncertainty
 
@@ -27,47 +47,66 @@ There are two major reasons we can be uncertain. Either we _lack sufficient know
 
 - **You lack sufficient knowledge**. This is also known variously as *sampling uncertainty*, parameter uncertainty, structural uncertainty, and more. If you collected more data you could in principle make a better model that more closely represents reality.
 
-- **The system is inherently unpredictable**. This is also known as **randomness** or **stochasticity**. No matter how much we study a coin, we will not be able to predict outcome of a coin flip any better than 50-50 (at least for a proper coin flip!). Ecological systems have inherent variability. We can't predict with certainty whether or not an individual will mate, or die. We can't really even be certain whether next year or the year after that will be a good year or a bad year for offspring production or mortality in general!
+- **The system is inherently unpredictable**. This is also known as **randomness** or **stochasticity**. No matter how much we study and understand a natural system, we will never be able to predict the future with complete certainty. Ecological systems have inherent variability. We can't predict with certainty whether or not an individual will mate, or die. We can't really even be certain whether next year or the year after that will be a good year or a bad year for offspring production or mortality in general!
 
 ## How to deal with uncertainty
 The key is to **embrace uncertainty**. As population ecologists, we have three major tools to help us manage and account for uncertainty in our study systems:
 
 ### Uncertainty analysis
 
-1. First, what if we simply don't have enough data to build a perfect model? This is an example of *lacking sufficient knowledge*. In this case, the tool we use is called **uncertainty analysis**. Basically, we try all plausible values (or just the minimum and maximum value) and see what happens to our study system (e.g., does the population go extinct? decline?). You should know -- the term "sensitivity analysis" is often used for this concept, but InsightMaker uses this term in a different way (basically referring to multiple replicates of stochastic models) -- so we will refer to this as "uncertainty analysis" to avoid confusion)
+1. First, what if we simply don't have enough data to build a perfect model? This is an example of *lacking sufficient knowledge*. In this case, the tool we use is called **uncertainty analysis**. Basically, we try all plausible values for a parameter we are uncertain about (e.g., adult survival rate) and see what happens to our study system (e.g., does the population go extinct? decline?). 
 
-### Stochastic models (two main types)
+### Stochastic models (demographic and environmental stochasticity)
 
-2. Second, we usually can't predict whether an individual will live or die, breed or not breed (whether an individual will "get lucky" so to speak!)? We might know the per-capita *probability* of breeding, or the *probability* of dying, or the per-capita *rate* of offspring production, or the probability of a given offspring being female. But when it comes to projecting who lives and dies, who gives birth and who doesn't, how many females are born, we _just can't know for sure_. This is an example of a system being inherently unpredictable. In population ecology this is called **demographic stochasticity**. In this case, the tool we use is **computer-simulated "coin flipping"**.
+2. Second, we usually can't predict whether an individual will live or die, breed or not breed (whether an individual will "get lucky" so to speak!)? We might know the per-capita *probability* of breeding, or the *probability* of dying, or the per-capita *rate* of offspring production, or the probability of a given offspring being female. But when it comes to projecting exactly who lives and dies, who gives birth and who doesn't, and how many females are born, we _just can't know for sure_. This is an example of a system being inherently unpredictable. In population ecology this is called **demographic stochasticity**. In this case, we **randomly vary total births and deaths** to represent the inherent unpredictability of births and deaths.
 
-3. Third, we usually can't predict whether next year or the year after will be a good one or a bad one for a population- that is, whether the per-capita vital rates (e.g., $b$, or $d$ or $r$) will be more or less optimal year-to-year (whether a _population_ will "get lucky", so to speak). This is another example of a system being *inherently unpredictable*. In population ecology this is called **environmental stochasticity**. In this case, the tool we use is **randomly varying vital rates**. 
+3. Third, we usually can't predict whether next year or the year after will be a good one or a bad one for a population- that is, whether the per-capita vital rates (e.g., $b$, or $d$ or $r$) will be more or less optimal year-to-year (whether a _population_ will "get lucky", so to speak). This is another example of a system being *inherently unpredictable*. In population ecology this is called **environmental stochasticity**. In this case, we **randomly vary per-capita vital rates** to represent the inherent unpredictability of environmental conditions. 
 
 ![](dice1.png)
 
 ## Random number generation
-To incorporate uncertainty and randomness into our models, we need to include *stochastic* components so that each model run (replicate) -- or each year of each model run -- is different from one another. That is, we need to include at least one **random number generator** in our models! A random number generator is like a box of (potentially infinite) possible numbers -- a lottery ball machine for example! Each time we want a new number we reach in and pull one out, record the number, put it back in and shake it up again.
+To incorporate uncertainty and randomness into our models, we need to include *stochastic* components so that each model run (replicate) -- or each year of each model run -- is different from one another. That is, we need to include at least one **random number generator** in our models! A random number generator is like a lottery ball machine! Each time we want a new number we reach in and pull another number out, record the number, put it back in and shake it up again.
 
 ![](lottery1.png)
 
 
-Every random-number generator has a **distribution**. This is a way of defining what exactly is in the box. For example, the box might have 10 "ones", 5 "twos", and 2 "threes". In this case the distribution looks like this (*probability* of each *possibility*):
+Every random-number generator has a **distribution**. This is a way of defining what exactly is in the box. 
 
-```{r echo=FALSE}
-box <- c(rep(1,10),rep(2,5),rep(3,2))
-barplot(table(box)/sum(table(box)),ylab="probability",xlab="possibility")
+If you want to follow along with this lecture in R, you can find the R script [here](LECTURE8.R). I recommend right-clicking on the link, saving the script to a designated folder, and loading up the script in RStudio.
+
+For example, the box might have 10 "ones", 5 "twos", and 2 "threes". In this case the distribution looks like this (*probability* of each *possibility*):
+
+```{r}
+
+#############
+# Random number generation!
+
+
+#####
+# define an arbitrary distribution
+
+box <- c(rep(1,10),rep(2,5),rep(3,2))       # define what's in the lottery ball machine
+barplot(table(box)/sum(table(box)),ylab="probability",xlab="possibility")       # visualize the distribution of possibilities
 
 ```
 
 
-A probability distribution can be pretty much anything you want it to be. However, there are several key distributions that come up again and again, and we should know them!
+A probability distribution can be pretty much anything you want it to be. However, there are several key distributions that come up again and again, and we should learn them!
 
 ### Probability distributions
 
 ### Discrete vs. continuous
 In *discrete distributions*, each unique outcome has a specific probability (like the probability of flipping a coin 10 times and getting 4 heads). For example, let's consider a *binomial distribution*  
 
-```{r echo=FALSE}
-#rbinom(10,10,0.3)    # the random numbers have no decimal component
+```{r}
+
+################
+# Discrete distributions
+################
+
+
+#######
+# Example: binomial distribuition
 
              # plot a discrete distribution!
 xvals <- seq(0,10,1)
@@ -76,20 +115,20 @@ names(probs) <- xvals
                
 barplot(probs,ylab="Probability",xlab="Possibilities",main="Binomial distribution (discrete)")
 
-#barplot(cumsum(probs),ylab="Cumulative Probability",main="Binomial distribution (discrete)")   # cumulative distribution
 
-#sum(probs)   # just to make sure it sums to 1!  Does it??? 
 
 ```
 
 
 Another discrete distribution we will use in this class is the *Poisson distribution*:
 
-```{r echo=FALSE}
+```{r}
 
-             # plot a discrete distribution!
+#########
+# Poisson distribution
+
 xvals <- seq(0,10,1)
-probs <- dpois(xvals,lambda=2.2)
+probs <- dpois(xvals,lambda=2.2)     # POisson distribution
 names(probs) <- xvals
                
 barplot(probs,ylab="Probability",xlab="Possibilities",main="Poisson distribution (discrete)")
@@ -103,6 +142,13 @@ In *continuous distributions*, there are an infinite number of possibilities bet
 Let's consider the *uniform distribution*: 
 
 ```{r}
+
+################
+# CONTINUOUS DISTRIBUTIONS
+#################
+
+##########
+# Uniform distribution
 
 lower = 0
 upper = 10
@@ -118,6 +164,10 @@ Another continuous distribution you should know is called the *Normal distributi
 **Q** What population parameter might this distribution be useful for modeling?
 
 ```{r}
+
+#########
+# Normal distribution
+
 mean = 7.1
 stdev = 1.9
 
@@ -130,6 +180,10 @@ Another continuous distribution you should know is called the *Lognormal distrib
 **Q** What population parameter might this distribution be useful for modeling?
 
 ```{r}
+
+############
+# Log-normal distribution
+
 meanlog = 1.4
 stdevlog = 0.6
 
@@ -137,11 +191,15 @@ curve(dlnorm(x,meanlog,stdevlog),0,15,ylab="Probability (density)",xlab="Possibi
 
 ```
 
-Another continuous distribution you should know is called the *Beta distribution*. This distribution has a lower bound of zero and an upper bound of 1.
+Another continuous distribution you might want to know is called the *Beta distribution*. This distribution has a lower bound of zero and an upper bound of 1.
 
 **Q** What population parameter might this distribution be useful for modeling?
 
 ```{r}
+
+##########
+# Beta distribution
+
 shape1 = 10
 shape2 = 4
 
@@ -159,11 +217,16 @@ Here's some R syntax for you!
 
 Note that R random number generators start with the letter "r" -- for "random".
 
-The first *argument* represents how many random numbers you want R to draw from the specified distribution.
+The first *argument* (specified within the parentheses in a function call) represents how many random numbers you want R to draw from the specified distribution.
 
 The following arguments represent the *parameters* of the random distribution you wish to draw from. 
 
 ```{r eval=F}
+
+################
+# Random number generation!
+
+
 ### Binomial random number generator
 rbinom(1,size=10,prob=0.5)    # note: "size" is the number of coin flips, and "prob" is the probability of coming up heads
 
@@ -182,14 +245,20 @@ rlnorm(1,meanlog=0.5,sdlog=0.2)    # lognormal distribution is defined by "meanl
 ### beta random number generator (bounded between 0 and 1- just like survival rate!)
 rbeta(1,shape1=10,shape2=3)  # beta distribution is defined by "shape1" and "shape2", which together define the mean and spread within the range from 0 to 1.
 
+
 ```
 
 You can even make up your own distribution if you want!
 
 ```{r}
-distribution <- c(5,3,5,4,3,6,4,5,5,1,6,5,4,3,6,6,4,2,8,4,4,5,2)
+
+########
+# sample from an arbitrary distribution!
+
+distribution <- c(5,3,5,4,3,6,4,5,5,1,6,5,4,3,6,6,4,2,8,4,4,5,2)     # make up a set of possibilities
 hist(distribution,freq = F, ylab="Probability",xlab="Possibilities")  # visualize distribution
 sample(distribution,1)  # take one random sample from this distribution!
+
 ```
 
 
@@ -202,11 +271,20 @@ hist(rgamma(20,4.1,2))
 
 ![](canvasback1.jpg)
 
-Let's imagine we have studied a population of canvasback ducks over a 20 year period and we have estimated the average number of eggs successfully hatched per female for each of the 20 years. 
+Let's imagine we have studied a large population of canvasback ducks over a 20 year period and we have estimated the average number of eggs successfully hatched per female for each of 20 consecutive years. 
 
 We first enter these numbers into R and visualize the distribution:
 
 ```{r}
+
+#############
+# Demonstration: use data to determine a distribution!
+#############
+
+
+#############
+# Made-up canvasback data- number of eggs hatched per female for 20 years
+
 hatch_perfem <- c(3.05, 1.45, 0.99, 3.24, 1.49, 1.70, 1.66, 2.32, 0.83, 2.41,
 2.33, 1.68, 1.43, 2.74, 2.05, 3.13, 1.90, 3.69, 1.55, 2.79)
 
@@ -214,31 +292,51 @@ hist(hatch_perfem)
 
 ```
 
-**Q**: what type of uncertainty does this set of values most likely represent?
+**Q**: what type of uncertainty does this set of values most likely represent? [tophat]
 
 **Q**: what distribution might we use to fit this distribution?
 
-Now let's try to fit a distribution to these data! Because the total per-capita number of eggs successfully hatched cannot go below zero (but has no defined upper bound) let's try to fit a lognormal distribution!
+Now let's try to fit a distribution to these data! We could use a normal distribution (which would be perfectly fine), but because the total per-capita number of eggs successfully hatched cannot go below zero (but has no defined upper bound) it's even better to use a lognormal distribution!
 
-We could use statistics to fit the distribution, but we are just going to use trial and error. Here is some code to help you get started.
+We could use statistics to fit the distribution, but we are just going to use trial and error for now! Here is some code to help you get started.
 
 Note that the lognormal distribution has two parameters: the first (meanlog) helps to define the mean and the other (sdlog) helps to determine the variability of the distribution. 
 
 ```{r}
 
+############
+# Try to identify a lognormal random number distribution to represent the canvasback data
+
 ## first, plot a histogram of the data from the 20-year study
 hist(hatch_perfem,freq=F,main="Histogram of avg number hatched per female",xlab="possibilities",ylab="probability",xlim=c(0,10),ylim=c(0,1))
 
-## now, overlay a lognormal probability distribution with arbitrary parameters (meanlog and sdlog)
+## now, overlay a lognormal probability distribution with arbitrary parameters (meanlog and sdlog). This is just a starting point.
 
-curve(dlnorm(x,meanlog=1.5,sdlog=0.2),col="green",lty=2,lwd=2,add=T)
+curve(dlnorm(x,meanlog=1.5,sdlog=0.39),col="green",lty=2,lwd=2,add=T)
 
+curve(dlnorm(x,meanlog=1.5,sdlog=0.39),col="green",lty=2,lwd=2,add=T)    # try a different value...
+
+#### Keep changing the value for meanlog until you find best parameters to fit the data!
+
+#### Once you find the best-fit parameters, generate 5 random numbers from this distribution using the "rlnorm()" function in R
+
+rlnorm(5,meanlog=1.5,sdlog=0.39)    # for example!
 
 ```
 
-1) Use trial-and-error to find appropriate parameters for the lognormal distribution.
+```{r echo=FALSE, eval=FALSE}
 
-2) Use your fitted distribution to predict the average number of hatchlings per female for the next 5 years. To do this, use the "rlnorm" function in R.
+library(MASS)
+fitdistr(hatch_perfem,"log-normal")
+
+```
+
+
+1) Use trial-and-error to find appropriate "meanlog" parameter for the lognormal distribution.
+
+2) Use your fitted distribution to predict the average number of hatchlings per female for the next 5 years. To do this, use the "rlnorm()" function in R.
+
+**Q**: what is the best-fit value for "meanlog"?  [tophat]
 
 
 
@@ -253,7 +351,7 @@ Let's start with a basic exponentially growing population that looks something l
 
 #### _Parameter Uncertainty_    
 
-1. Set *Birth rate* equal to 0.4 and *Death rate* equal to 0.3. Set initial abundance at 10. Under the "Settings" menu set the model to run for 10 years. Make sure your *Population* stock can not go negative (this is a setting in the configurations panel). Hit "Simulate"- you should see exponential growth! 
+1. Set *Birth rate* equal to 0.4 and *Death rate* equal to 0.3. Set initial abundance to 10. Under the "Settings" menu, set the model to run for 10 years. Make sure your *Population* stock can not go negative (this is a setting in the configuration panel). Hit "Simulate"- you should see exponential growth! 
 
 2. **Parameter uncertainty:** What if we have imperfect knowledge about birth rate? The birth rate could be anything from 0.2 to 0.5. Run the model with the lowest and the highest possible birth rate. 
 
@@ -273,16 +371,19 @@ Let's start with a basic exponentially growing population that looks something l
 RandBinomial([Population], [Death rate])
 ```
 
-In plain english: the number of deaths is equal to the number of "coin flips" that come out heads if the probability of getting heads is equal to [Death rate] and the number of flips is equal to [Abundance]. 
+In plain English: the number of deaths each year is a random quantity determined by "coin-flipping" (Binomial distribution is the "coin flip" distribution). The total deaths is computed by flipping a coin for each individual in the population and killing off all individuals that come out 'heads' (where the probability of coming up 'heads' is the death rate). 
 
-For the total births, $B$ we will use the *Poisson* distribution. The Poisson distribution is often use to represent births, because there could feasibly be more births than there are individuals currently in the population (e.g., if all individuals have two offspring!). This would not be possible with a binomial distribution! That is, the maximum number of "heads" (you can always think of binomial distributions as coin-flipping!) is the total number of individuals. 
+For the total births, $B$ we will use the *Poisson* distribution. The Poisson distribution is often use to represent births, because it produces whole numbers AND it can generate numbers bigger than the total population size. 
+
+NOTE: there could feasibly be more births than there are individuals currently in the population (e.g., if all individuals have two offspring!). This would not be possible with a binomial distribution! That is, you can't get more "heads" (deaths) than the total number of coin flips (individuals in the population). 
 
 To do this in InsightMaker, use the following formula for the *Births* flow:
 
 ```
 RandPoisson([Population]*[Birth rate])
 ```
-In plain english: the number of births is a random draw from a Poisson random number generator with mean equal to the expected number of births ([Population]*[Birth rate]).
+
+In plain English: the number of births ([Births] flow in InsightMaker) is a random draw from a Poisson random number generator with a mean equal to the expected number of births ([Population]*[Birth rate]).
 
 3. Run the simulation. What does it look like?
 
@@ -294,8 +395,8 @@ In plain english: the number of births is a random draw from a Poisson random nu
 
 #### _Environmental Stochasticity_  
 
-1. Set *Births* back to what it was before ([Population]x[Birth rate]), and do the same for *Deaths*.
-2. We will use a *Normal distribution* to represent how the birth rate changes each year. This could represent climatic variablity -- "good years" and "bad years". The *Normal distribution* is commonly used for this type of variability- it is characterized by an average value (**mean**) and a variability measure (**standard deviation**). To do this in InsightMaker, use the following formula for the *Birth Rate* variable:
+1. Set *Births* back to what it was before ([Population]x[Birth rate]), and do the same for *Deaths* ([Population]x[Death rate]).
+2. We will use a *Normal distribution* to represent how the per-capita birth rate changes each year. This could represent climatic variablity -- "good years" and "bad years". The *Normal distribution* is commonly used for this type of variability- it is characterized by an average value (**mean**) and a variability measure (**standard deviation**). To do this in InsightMaker, use the following formula for the *Birth Rate* variable:
 
 ```
 RandNormal(0.4, 0.4)
@@ -315,7 +416,7 @@ RandNormal(0.3, 0.3)
 
 6. Note that the normal distribution CAN go below zero or above 1, which is not always biologically realistic! However, as we have seen before, InsightMaker does not allow a [Flow In] to remove from a [Stock] or a [Flow Out] to add to a [Stock], so we don't really need to worry about this problem! That is, InsightMaker will *truncate* the normal distribution for us. Alternatively (if we want to be very explicit) we could just **truncate** the normal distribution ourselves. That is, if the random number you draw comes out below zero, just make it zero! 
 
-For birth rate, this can be done like this:
+For the [Birth Rate] variable in InsightMaker, this can be done like this:
 
 ```
 Max(0,RandNormal(0.4, 0.4))
@@ -323,9 +424,9 @@ Max(0,RandNormal(0.4, 0.4))
 
 **Q** Can you implement a **catastrophe** scenario? That is, make a scenario where there is a low probability of an event (e.g., flood, disease, drought) that causes very high mortality and/or very low birth rate?  
 
-A catastrophe can be implemented by using an IF-THEN statement: if the random number is below some rare value (e.g., 0.05) then cause a catastrophe to occur! 
+A catastrophe can be implemented by using an IF-THEN-ELSE statement: if the random number is below some rare value (e.g., 0.05) then cause a catastrophe to occur (otherwise keep all vital rates at their normal values)! 
 
-Hint: You may want to use an IF-THEN-ELSE statement to do this... The most basic (most commonly used) random number generator draws numbers from a *uniform* distribution with a minimum of 0 and a maximum of 1. To do this in InsightMaker, you can use this syntax:
+Hint: The most basic (most commonly used) random number generator draws numbers from a *uniform* distribution with a minimum of 0 and a maximum of 1. To do this in InsightMaker, you can use this syntax:
 
 ```
 Rand(0, 1)
